--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,6 @@ color: crimson;
 
 .image img {
 width: 100%;
-height: 530px;
 display: flex;
 flex-direction: row;
 justify-content: center;
@@ -88,9 +87,15 @@ align-items: center;
   
 }
 
-#smallcase{
+#smallcase1{
   font-size: x-small;
 }
+#smallcase2{
+  font-size: x-small;
+  display: flex;
+  justify-content: flex-end;
+}
+
 
 .a{
   color: black;
